--- a/Design_Highlands/Design_Highlands.csproj
+++ b/Design_Highlands/Design_Highlands.csproj
@@ -196,6 +196,7 @@
     <Compile Include="QLTV.Designer.cs">
       <DependentUpon>QLTV.cs</DependentUpon>
     </Compile>
+    <Compile Include="Member.cs" />
     <Compile Include="Staff.cs" />
     <Compile Include="UpdateMember.cs">
       <SubType>Form</SubType>
