--- a/Design_Highlands/packages.config
+++ b/Design_Highlands/packages.config
@@ -5,6 +5,7 @@
   <package id="Bunifu.Licensing" version="5.0.0" targetFramework="net472" />
   <package id="Bunifu.UI.WinForms" version="6.0.2" targetFramework="net472" />
   <package id="Bunifu.UI.WinForms.1.5.3" version="1.0.0" targetFramework="net472" />
+  <package id="CloudinaryDotNet" version="1.20.0" targetFramework="net472" />
   <package id="Costura.Fody" version="3.3.3" targetFramework="net472" />
   <package id="DnsClient" version="1.6.1" targetFramework="net472" />
   <package id="Fody" version="4.0.2" targetFramework="net472" developmentDependency="true" />
@@ -18,7 +19,7 @@
   <package id="MongoDB.Driver" version="2.19.0" targetFramework="net472" />
   <package id="MongoDB.Driver.Core" version="2.19.0" targetFramework="net472" />
   <package id="MongoDB.Libmongocrypt" version="1.7.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="RestSharpSigned" version="105.2.3" targetFramework="net472" />
   <package id="SharpCompress" version="0.30.1" targetFramework="net472" />
   <package id="Snappier" version="1.0.0" targetFramework="net472" />
@@ -73,6 +74,7 @@
   <package id="System.ServiceProcess.ServiceController" version="6.0.0" targetFramework="net472" />
   <package id="System.Speech" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.5.1" targetFramework="net472" />
   <package id="System.Threading.AccessControl" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Web.Services.Description" version="4.9.0" targetFramework="net472" />
